Update po files using updateallpo-multiOS.sh

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -1990,6 +1990,21 @@ msgstr "وضع الإعداد %s"
 
 msgid "Configuration..."
 msgstr "الإعداد..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "جاري الإعداد"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "جاري الإعداد"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "جاري الإعداد"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr ""
@@ -4286,6 +4301,12 @@ msgstr "إعدادات وظائف الأزرار"
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+msgid "Hotswitchable tuner"
+msgstr ""
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "كم دقيقه تريد أن تضيف إلى التسجيل ؟"
 
@@ -4607,6 +4628,10 @@ msgstr "تم إختياردليل غير صالح %s"
 
 #, fuzzy
 msgid "Invalid location"
+msgstr "موقع غير صالح"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "موقع غير صالح"
 
 msgid "Invalid transponder data"
@@ -7455,6 +7480,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -8962,8 +8999,7 @@ msgstr "الانتقال الى الفرعيه السابقه"
 msgid "Switch to radio mode"
 msgstr "انتقال إلى وضع الراديو"
 
-#
-msgid "Switchable tuner types:"
+msgid "Switchable tuner types"
 msgstr ""
 
 msgid "Switzerland"
@@ -9282,7 +9318,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -11387,9 +11423,6 @@ msgstr ""
 msgid "epg cache backup"
 msgstr ""
 
-msgid "equal to"
-msgstr "مساوى لـــ"
-
 msgid "equestrian"
 msgstr ""
 
@@ -11617,10 +11650,6 @@ msgstr "مقفل"
 
 msgid "long"
 msgstr "مطول"
-
-#
-msgid "loopthrough to"
-msgstr ""
 
 msgid "magazines/reports/documentary"
 msgstr ""
@@ -11939,10 +11968,6 @@ msgid "scan state"
 msgstr "حاله البحث"
 
 msgid "science fiction/fantasy/horror"
-msgstr ""
-
-#
-msgid "second cable of motorized LNB"
 msgstr ""
 
 msgid "seconds"
