--- a/po/bg.po
+++ b/po/bg.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 3.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2018-11-12 20:51+0200\n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: Bulgarian\n"
@@ -1859,6 +1859,21 @@ msgstr "Режим Конфигурация: %s"
 
 msgid "Configuration..."
 msgstr "Конфигурация..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Конфигуриране"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Конфигуриране"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Конфигуриране"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Допълнително закъснение за подобряване синхронизацията на външни субтитри."
@@ -4082,6 +4097,14 @@ msgid "Hotkey zap"
 msgstr "Превключване Бързи Бутони"
 
 #, fuzzy
+msgid "Hotswitchable"
+msgstr "непроверено"
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Превключваеми типове тунери:"
+
+#, fuzzy
 msgid "How many minutes do you want add to the recording?"
 msgstr "Колко минути желаете да запишете?"
 
@@ -4387,6 +4410,10 @@ msgid "Invalid directory selected: %s"
 msgstr "Избрана грешна директория: %s"
 
 msgid "Invalid location"
+msgstr "Грешно Място"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Грешно Място"
 
 msgid "Invalid transponder data"
@@ -6991,6 +7018,18 @@ msgstr "Изберете ‘A’ или ‘B’ ако вашата антенн
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Изберете ‘Unicable’ ако вашия приемник ще използва Unicable устройство. В противен случай изберете ‘FBC автоматично’."
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Изберете ‘лента’ ако използвате 'универсален' LNB, или се консултирайте със спецификацията на вашия LNB."
 
@@ -8376,7 +8415,8 @@ msgstr "Премини на предишния суб сървис"
 msgid "Switch to radio mode"
 msgstr "Превключи към режим радио"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Превключваеми типове тунери:"
 
 msgid "Switzerland"
@@ -8687,8 +8727,8 @@ msgstr ""
 "За обикновенните потребители това не е важно.\n"
 "Без паника моля, ако тук се покаже каквато и да е подозрителна информация!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Това е хибриден тунер. Наличните опции зависят от хардуера. Кабелен и Наземен не могат да се конфигурират по едно и също време. Ако искате да използвате кабелен+сателитен или наземен+сателитен, настройте кабелен/наземен първо и запазете настройките. Отворете наново и конфигурирайте сателитния."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Това е реда по който DiSEqC командите се изпращат към антената. Реда трябва точно да отговаря на реда на устройствата подредени по антенния кабел (започвайки с приемника)."
@@ -10687,9 +10727,6 @@ msgstr "развлечение (6-14 год)"
 msgid "epg cache backup"
 msgstr "запазване на EPG кеша"
 
-msgid "equal to"
-msgstr "еднакъв с"
-
 msgid "equestrian"
 msgstr "конен спорт"
 
@@ -10907,9 +10944,6 @@ msgstr "заключен"
 
 msgid "long"
 msgstr "дълго"
-
-msgid "loopthrough to"
-msgstr "преминаващ към"
 
 msgid "magazines/reports/documentary"
 msgstr "списания/репортажи/документални"
@@ -11213,9 +11247,6 @@ msgstr "състояние търсене"
 
 msgid "science fiction/fantasy/horror"
 msgstr "научна фантастика/фентъзи/ужаси"
-
-msgid "second cable of motorized LNB"
-msgstr "втори кабелен или моторизиран LNB"
 
 msgid "seconds"
 msgstr "секунди"
