--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -2093,6 +2093,24 @@ msgstr "Konfigurations type %s"
 #
 msgid "Configuration..."
 msgstr "Konfiguration..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Konfigurerer"
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Konfigurerer"
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Konfigurerer"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Konfigurer en yderligere forsinkelse for at forbedre ekstern undertekst synkronisation "
@@ -4572,6 +4590,15 @@ msgid "Hotkey zap"
 msgstr "Hotkey zap"
 
 #, fuzzy
+msgid "Hotswitchable"
+msgstr "ikke muligt at teste"
+
+#
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Udskiftelige tuner typer"
+
+#, fuzzy
 msgid "How many minutes do you want add to the recording?"
 msgstr "Hvor mange minutter vil du tilføje til optagelsen?"
 
@@ -4917,6 +4944,11 @@ msgstr "Ugyldig mappe valgt: %s"
 
 #
 msgid "Invalid location"
+msgstr "Ugyldig placering"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Ugyldig placering"
 
 msgid "Invalid transponder data"
@@ -7955,6 +7987,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -9521,7 +9565,8 @@ msgid "Switch to radio mode"
 msgstr "Skift til radio mode"
 
 #
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Udskiftelige tuner typer"
 
 msgid "Switzerland"
@@ -9858,7 +9903,7 @@ msgstr ""
 "For en normal bruger er dette ikke relevant.\n"
 "Gå ikke i panik når du ser værdier blive vist, som du synes ser mistænkelig ud!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -12129,10 +12174,6 @@ msgstr "entertainment (6-14 year old)"
 msgid "epg cache backup"
 msgstr "epg cache backup"
 
-#
-msgid "equal to"
-msgstr "svarende til"
-
 msgid "equestrian"
 msgstr "dressur"
 
@@ -12381,10 +12422,6 @@ msgstr "låst "
 
 msgid "long"
 msgstr ""
-
-#
-msgid "loopthrough to"
-msgstr "gennemløb til"
 
 msgid "magazines/reports/documentary"
 msgstr "magasiner/reporter/dokumentar"
@@ -12740,10 +12777,6 @@ msgstr "søge status"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction/fantasy/gys"
-
-#
-msgid "second cable of motorized LNB"
-msgstr "sekundært kabel fra motor LNB"
 
 #
 msgid "seconds"
