--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -1851,6 +1851,21 @@ msgstr "Τύπος ρύθμισης: %s"
 
 msgid "Configuration..."
 msgstr "Παραμετροποίηση..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Παραμετροποίηση"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Παραμετροποίηση"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Παραμετροποίηση"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Ρύθμιση πρόσθετης καθυστέρησης για βελτίωση του συγχρονισμού των εξωτερικών υποτίτλων."
@@ -4049,6 +4064,14 @@ msgstr "Ρυθμίσεις Hotkey"
 msgid "Hotkey zap"
 msgstr "Ζάπινγκ Hotkey"
 
+#, fuzzy
+msgid "Hotswitchable"
+msgstr "μη δυνατή δοκιμή"
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Εναλλάξιμοι τύποι tuner: "
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "Πόσα λεπτά θέλετε να προστεθούν στην εγγραφή;"
 
@@ -4350,6 +4373,10 @@ msgid "Invalid directory selected: %s"
 msgstr "Επιλέχθηκε μη έγκυρος φάκελος: %s"
 
 msgid "Invalid location"
+msgstr "Μη έγκυρη τοποθεσία"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Μη έγκυρη τοποθεσία"
 
 msgid "Invalid transponder data"
@@ -6939,6 +6966,18 @@ msgstr "Επιλέξτε 'A' ή 'B' αν το απαιτεί το κεραιοσ
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Επιλέξτε 'FBC SCR' αν αυτό το tuner θα χρησιμοποιήσει μία συσκευή SCR (Unicable/JESS). Για όλες τις άλλες ρυθμίσεις επιλέξτε 'FBC αυτόματο'."
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Επιλέξτε 'μπάντα' αν χρησιμοποιείτε ένα 'universal' LNB, αλλιώς ανατρέξτε στον πίνακα χαρακτηριστικών του LNB σας."
 
@@ -8304,7 +8343,8 @@ msgstr "Μετάβαση στην προηγούμενη υπό-υπηρεσία
 msgid "Switch to radio mode"
 msgstr "Αλλαγή σε λειτουργία ραδιοφώνου"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Εναλλάξιμοι τύποι tuner: "
 
 msgid "Switzerland"
@@ -8614,8 +8654,8 @@ msgstr ""
 "Δεν αφορά κοινούς χρήστες.\n"
 "Παρακαλούμε μη πανικοβάλλεστε όταν βλέπετε να απεικονίζονται τιμές που σας φαίνονται ύποπτες!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Αυτό είναι ένα tuner πολλαπλών τύπων. Οι διαθέσιμες επιλογές εξαρτώνται από το υλικό. Ο καλωδιακός και ο επίγειος τύπος δεν μπορούν να ρυθμιστούν ταυτόχρονα. Αν θέλετε να χρησιμοποιήσετε το δέκτη σας ως καλωδιακό + δορυφορικό ή επίγειο + δορυφορικό, ρυθμίστε τον καλωδιακό/επίγειο τύπο πρώτα και αποθηκεύστε. Ανοίξτε ξανά και ρυθμίστε ως δορυφορικό."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Αυτή είναι η σειρά με την οποία αποστέλλονται οι εντολές DiSEqC στο κεραιοσύστημα. Η σειρά πρέπει να αντιστοιχεί ακριβώς στη σειρά με την οποία έχουν παραταχθεί οι φυσικές συσκευές στο καλώδιο σήματος (ξεκινώντας από τον τελευταίο δέκτη)."
@@ -10609,9 +10649,6 @@ msgstr "ψυχαγωγία (6-14 ετών)"
 msgid "epg cache backup"
 msgstr "αντίγραφο ασφαλείας του cache του epg"
 
-msgid "equal to"
-msgstr "ίσο με"
-
 msgid "equestrian"
 msgstr "ιπποδρομίες"
 
@@ -10824,9 +10861,6 @@ msgstr "κλειδωμένο"
 
 msgid "long"
 msgstr "παρατεταμένο"
-
-msgid "loopthrough to"
-msgstr "loopthrough σε"
 
 msgid "magazines/reports/documentary"
 msgstr "περιοδικά/εκθέσεις/ντοκιμαντέρ"
@@ -11130,9 +11164,6 @@ msgstr "κατάσταση ανίχνευσης"
 
 msgid "science fiction/fantasy/horror"
 msgstr "επιστημονικής φαντασίας/φαντασίας/τρόμου"
-
-msgid "second cable of motorized LNB"
-msgstr "δεύτερο καλώδιο σε κινούμενο LNB"
 
 msgid "seconds"
 msgstr "δευτερόλεπτα"
