--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2018-12-29 02:52+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: SFTEAM  angelo2807@hotmail.com\n"
@@ -2074,6 +2074,24 @@ msgstr "Modo Configuración: %s"
 #
 msgid "Configuration..."
 msgstr "Configuración de Red..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Configurando"
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Configurando"
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Configurando"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Configure un retraso adicional para mejorar la sincronización de subtítulos externos."
@@ -4504,6 +4522,14 @@ msgstr "Configuración de teclas de acceso rápido"
 msgid "Hotkey zap"
 msgstr "Tecla de acceso rápido"
 
+#, fuzzy
+msgid "Hotswitchable"
+msgstr "Intachable"
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Tipos de tuner seleccionables::"
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "¿Cuántos minutos quieres agregar a la grabación?"
 
@@ -4842,6 +4868,11 @@ msgstr "Directorio seleccionado inválido: %s"
 
 #
 msgid "Invalid location"
+msgstr "Locación inválida"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Locación inválida"
 
 msgid "Invalid transponder data"
@@ -7793,6 +7824,18 @@ msgstr "Seleccione ‘A’ o ‘B’ si su sistema aéreo lo requiere, de lo con
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Seleccione ‘FBC SCR’ si este sintonizador se conectará a un dispositivo SCR (Unicable / JESS). Para todas las demás configuraciones, seleccione ‘FBC automático’."
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Seleccione ‘banda’ si usa un LNB ‘universal’; de lo contrario, consulte la hoja de especificaciones de LNB."
 
@@ -9316,7 +9359,8 @@ msgstr "Cambiar al servicio secundario anterior"
 msgid "Switch to radio mode"
 msgstr "Cambiar al modo de radio"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Tipos de tuner seleccionables::"
 
 msgid "Switzerland"
@@ -9665,8 +9709,8 @@ msgstr ""
 "Para un usuario normal no es relevante.\n"
 "No entre en pánico por favor cuando vea los valores que se muestran que usted piensa que parece sospechoso!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Este es un sintonizador multitipo. Las opciones disponibles dependen del hardware. El cable y el terrestre no se pueden configurar al mismo tiempo. Si desea utilizar como cable + satélite o terrestre + satélite, configure primero el cable / terrestre y luego guárdelo. Vuelva a abrir y configurar de nuevo como satélite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "el suyo es el orden en que los comandos DiSEqC se envían al sistema aéreo. La orden debe corresponderse exactamente con el orden en que los dispositivos físicos están dispuestos a lo largo del cable de señal (comenzando desde el extremo del receptor)."
@@ -11888,10 +11932,6 @@ msgstr "Entretenimiento (6-14 años)"
 msgid "epg cache backup"
 msgstr "Copia de seguridad del caché epg"
 
-#
-msgid "equal to"
-msgstr "igual a"
-
 msgid "equestrian"
 msgstr "ecuestre"
 
@@ -12139,10 +12179,6 @@ msgstr "bloqueado"
 
 msgid "long"
 msgstr "largo"
-
-#
-msgid "loopthrough to"
-msgstr "conectado a"
 
 msgid "magazines/reports/documentary"
 msgstr "Revistas / informes / documentales"
@@ -12495,10 +12531,6 @@ msgstr "estado de la búsqueda"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Ciencia ficción / fantasía / horror"
-
-#
-msgid "second cable of motorized LNB"
-msgstr "segundo cable del LNB motorizado"
 
 #
 msgid "seconds"
