--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2019-02-13 20:52+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -2047,6 +2047,24 @@ msgstr "Toimintatila: %s"
 
 msgid "Configuration..."
 msgstr "Asetukset..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Muokataan"
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Muokataan"
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Muokataan"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Määritä ylimääräinen viive parantaaksesi ulkoisten tekstitysten ajoitusta."
@@ -4450,6 +4468,13 @@ msgstr "Pikanäppäimet"
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Vaihdettavat viritintyypit:"
+
 #
 msgid "How many minutes do you want add to the recording?"
 msgstr "Kuinka monta minuuttia haluat lisätä tallennukseen?"
@@ -4792,6 +4817,11 @@ msgstr "Virheellinen hakemisto valittu: %s"
 
 #
 msgid "Invalid location"
+msgstr "Virheellinen sijainti"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Virheellinen sijainti"
 
 #
@@ -7782,6 +7812,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -9339,7 +9381,8 @@ msgstr "Vaihda edelliseen alipalveluun"
 msgid "Switch to radio mode"
 msgstr "Vaihda Radio-tilaan"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Vaihdettavat viritintyypit:"
 
 msgid "Switzerland"
@@ -9668,8 +9711,8 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Tämä on tuplaviritin. Vaihtoehdot riippivat laitteistostasi. Et voi virittää antenni. ja kaapeliviritintä samaan aikaan. Jos haluat käyttää kaapeli+sateliitti tai antenni+sateliitti, määrittele ensin kaapeli/antenniviritin ja tallenna. Avaa uudelleen asetukset ja määrittele sitten sateliitti."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr ""
@@ -11879,10 +11922,6 @@ msgstr "viihde (6-14 vuotiaat)"
 msgid "epg cache backup"
 msgstr "Ohjelmaoppaan välimuistin varmuuskopio"
 
-#
-msgid "equal to"
-msgstr "Sama kuin"
-
 msgid "equestrian"
 msgstr "ratsastus"
 
@@ -12121,10 +12160,6 @@ msgstr "Lukittu"
 
 msgid "long"
 msgstr "Pitkä"
-
-#
-msgid "loopthrough to"
-msgstr "Läpikytkentä"
 
 msgid "magazines/reports/documentary"
 msgstr "makasiini/raportti/dokumentti"
@@ -12481,10 +12516,6 @@ msgstr "Haun tila"
 
 msgid "science fiction/fantasy/horror"
 msgstr "scifi/fantasia/kauhu"
-
-#
-msgid "second cable of motorized LNB"
-msgstr "Kääntyvän antennin twin-LNB:n toinen kaapeli"
 
 #
 msgid "seconds"
