--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -2087,6 +2087,24 @@ msgstr "Ynstellingen modus"
 #, fuzzy
 msgid "Configuration..."
 msgstr "Netwurk configuraasje"
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Oan it ynstellen"
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Oan it ynstellen"
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Oan it ynstellen"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr ""
@@ -4588,6 +4606,12 @@ msgstr ""
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+msgid "Hotswitchable tuner"
+msgstr ""
+
 #
 #, fuzzy
 msgid "How many minutes do you want add to the recording?"
@@ -4944,6 +4968,11 @@ msgstr "Unjildige map selektearre: %s"
 #
 #, fuzzy
 msgid "Invalid location"
+msgstr "Plak net tastien"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Plak net tastien"
 
 msgid "Invalid transponder data"
@@ -8030,6 +8059,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -9650,8 +9691,7 @@ msgstr "Gjin nei foarige undersender"
 msgid "Switch to radio mode"
 msgstr ""
 
-#
-msgid "Switchable tuner types:"
+msgid "Switchable tuner types"
 msgstr ""
 
 msgid "Switzerland"
@@ -9971,7 +10011,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -12209,10 +12249,6 @@ msgstr ""
 msgid "epg cache backup"
 msgstr ""
 
-#
-msgid "equal to"
-msgstr "gelyk oan"
-
 msgid "equestrian"
 msgstr ""
 
@@ -12463,10 +12499,6 @@ msgstr "op slot"
 
 msgid "long"
 msgstr ""
-
-#
-msgid "loopthrough to"
-msgstr "trochskeakele nei"
 
 msgid "magazines/reports/documentary"
 msgstr ""
@@ -12822,10 +12854,6 @@ msgstr "sykjen status"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-#
-msgid "second cable of motorized LNB"
-msgstr "twadde kabel fan LNB-motor"
 
 #
 msgid "seconds"
