--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-19 19:48+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2019-02-18 17:28+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -1865,6 +1865,21 @@ msgstr "Način konfiguracije: %s"
 
 msgid "Configuration..."
 msgstr "konfiguracija..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Konfiguriranje"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Konfiguriranje"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Konfiguriranje"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Konfigurirajte dodatnu latenciju kako biste poboljšali vanjsku sinkronizaciju titla."
@@ -4071,6 +4086,14 @@ msgstr "HotKey postavke za postavljanje"
 msgid "Hotkey zap"
 msgstr "HotKey prebacivanje"
 
+#, fuzzy
+msgid "Hotswitchable"
+msgstr "nestabilan"
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Promjenjive vrste tunera:"
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "Koliko minuta želite dodati snimci?"
 
@@ -4371,6 +4394,10 @@ msgid "Invalid directory selected: %s"
 msgstr "Odabran je nevažeći direktorij: %s"
 
 msgid "Invalid location"
+msgstr "Nevažeća lokacija"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Nevažeća lokacija"
 
 msgid "Invalid transponder data"
@@ -6965,6 +6992,18 @@ msgstr "Odaberite 'A' ili 'B' ako to zahtijeva antenski sustav, u suprotnom odab
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Odaberite 'FBC SCR' ako se ovaj tuner spaja na SCR (Unicable/JESS) uređaj. Za sve ostale postavke odaberite 'FBC automatic'."
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Odaberite 'opseg' ako koristite 'univerzalni' LNB, inače konzultirajte LNB specifikacije."
 
@@ -8334,7 +8373,8 @@ msgstr "Prebacite se na prethodnu pod-uslugu"
 msgid "Switch to radio mode"
 msgstr "Prebacite se na radio način"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Promjenjive vrste tunera:"
 
 msgid "Switzerland"
@@ -8642,8 +8682,8 @@ msgstr ""
 "Za normalne korisnike to nije relevantno.\n"
 "Molim vas ne paničite kada vidite da se vrijednosti prikazuju a mislite da su sumnjive!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Ovo je multi tuner. Dostupne opcije ovise o hardveru. Povezivanje kabelske i zemaljske TV nije moguće istovremeno. Ako želite koristiti kabelsku tv + satelit ili zemaljsku tv + satelit, najprije konfigurirajte kabelsku tv/zemaljsku tv a zatim spremite. Ponovno otvorite i namjestite kao satelit."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Ovo je redoslijed slanja DiSEqC naredbi u antenski sustav. Poredak mora točno odgovarati poretku postavljanja uređaja koji su postavljeni duž signalnog kabela (počevši od kraja prijemnika)."
@@ -10641,9 +10681,6 @@ msgstr "zabava (6-14 godina starosti)"
 msgid "epg cache backup"
 msgstr "backup kopije epg-a"
 
-msgid "equal to"
-msgstr "jednak kao"
-
 msgid "equestrian"
 msgstr "jahanje"
 
@@ -10856,9 +10893,6 @@ msgstr "zaključano"
 
 msgid "long"
 msgstr "dugo"
-
-msgid "loopthrough to"
-msgstr "povratna petlja"
 
 msgid "magazines/reports/documentary"
 msgstr "časopisi/izvješća/dokumentarni"
@@ -11162,9 +11196,6 @@ msgstr "status pretraživanja"
 
 msgid "science fiction/fantasy/horror"
 msgstr "znanstvena fantastika/fantazija/horor"
-
-msgid "second cable of motorized LNB"
-msgstr "drugi kabel motoriziranog LNB-a"
 
 msgid "seconds"
 msgstr "sekunde"
