--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -1885,6 +1885,21 @@ msgstr "Mode penyetelan: %s"
 
 msgid "Configuration..."
 msgstr "Penyetelan..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Pengaturan"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Pengaturan"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Pengaturan"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Atur penundaan tambahan untuk memperbaiki sinkronisasi terjemahan dari luar."
@@ -4135,6 +4150,14 @@ msgid "Hotkey zap"
 msgstr "Zap tombol pintas"
 
 #, fuzzy
+msgid "Hotswitchable"
+msgstr "takbisa dites"
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Jenis penala bisa ditukar:"
+
+#, fuzzy
 msgid "How many minutes do you want add to the recording?"
 msgstr "Berapa menit anda ingin tambahkan ke perekaman?"
 
@@ -4444,6 +4467,10 @@ msgid "Invalid directory selected: %s"
 msgstr "Direktori tidak valid dipilih: %s"
 
 msgid "Invalid location"
+msgstr "Lokasi tidak valid"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Lokasi tidak valid"
 
 msgid "Invalid transponder data"
@@ -7085,6 +7112,18 @@ msgstr "Pilih 'A' atau 'B' jika sistem antena anda memerlukan ini, sebaliknya pi
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Pilih 'FBC SCR' jika penala ini akan terhubung ke perangkat SCR (Unikabel/JESS). Untuk semua setelan lain pilih 'FBC otomatis'."
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Pilih 'band' jika anda menggunakan LNB 'universal', jika tidak periksa lembar spek LNB anda."
 
@@ -8483,7 +8522,8 @@ msgstr "Beralih ke sub layanan sebelumnya"
 msgid "Switch to radio mode"
 msgstr "Beralih ke mode radio"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Jenis penala bisa ditukar:"
 
 msgid "Switzerland"
@@ -8798,8 +8838,8 @@ msgstr ""
 "Bagi pengguna normal ia nya tidak relevan.\n"
 "Mohon jangan panik bila anda menemukan nilai ditampilkan yg menurut anda terlihat mencurigakan!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Ini penala jenis multi. Pilihan yg tersedia tergantung perangkat keras. Kabel dan terrestrial tidak bisa disetel bersamaan. Jika anda ingin menggunakan sebagai kabel + satelit atau terrestrial + satelit, atur kabel/terrestrial dulu dan kemudian simpan. Buka lagi dan atur kembali sebagai satelit."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Ini urutan dimana perintah DiSEqC dikirim ke system antena. Urutannya harus sesuai secara tepat dengan urutan peralatan fisik yg disusun sepanjang kabel sinyal (mulai dari ujung Rx)."
@@ -10827,9 +10867,6 @@ msgstr "hiburan (umur 6-14 tahun)"
 msgid "epg cache backup"
 msgstr "cadangan cache epg"
 
-msgid "equal to"
-msgstr "setara"
-
 msgid "equestrian"
 msgstr "equestrian"
 
@@ -11047,9 +11084,6 @@ msgstr "terkunci"
 
 msgid "long"
 msgstr "panjang"
-
-msgid "loopthrough to"
-msgstr "loopthrough ke"
 
 msgid "magazines/reports/documentary"
 msgstr "majalah/laporan/dokumenter"
@@ -11355,9 +11389,6 @@ msgstr "keadaan pemindaian"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction/fantasy/horror"
-
-msgid "second cable of motorized LNB"
-msgstr "kabel sekunder LNB bermotor"
 
 msgid "seconds"
 msgstr "detik"
