--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2018-05-22 13:54+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -1864,6 +1864,21 @@ msgstr "Modalità configurazione: %s"
 
 msgid "Configuration..."
 msgstr "Impostazioni..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Impostazione in corso..."
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Impostazione in corso..."
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Impostazione in corso..."
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Impostare un ritardo aggiuntivo per migliorare la sincronizzazione dei sottotitoli esterni."
@@ -4075,6 +4090,14 @@ msgstr "Configurazione dei tasti"
 msgid "Hotkey zap"
 msgstr "Tasto per cambio canale"
 
+#, fuzzy
+msgid "Hotswitchable"
+msgstr "Non verificabile"
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Tipi di sintonizzatori commutabili:"
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "Quanti minuti devono essere aggiunti alla registrazione?"
 
@@ -4377,6 +4400,10 @@ msgid "Invalid directory selected: %s"
 msgstr "La cartella selezionata non è valida: %s"
 
 msgid "Invalid location"
+msgstr "Posizione non valida"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Posizione non valida"
 
 msgid "Invalid transponder data"
@@ -6981,6 +7008,18 @@ msgstr "Selezionare \"A\" o \"B\" se l'impianto lo richiede, altrimenti selezion
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Selezionare \"Unicable\" se questo sintonizzatore utilizza un dispositivo Unicable. Per tutte le altre configurazioni selezionare \"FBC automatico\"."
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Selezionare \"banda\" se si utilizza un LNB universale, altrimenti consultare le specifiche dell'LNB."
 
@@ -8363,7 +8402,8 @@ msgstr "Passare al sottocanale precedente"
 msgid "Switch to radio mode"
 msgstr "Passare alla modalità radio"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Tipi di sintonizzatori commutabili:"
 
 msgid "Switzerland"
@@ -8689,8 +8729,8 @@ msgstr ""
 "Per un utente normale non è significativa.\n"
 "Non preoccuparsi quando qui verranno visualizzate delle informazioni sospette!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Questo è un sintonizzatore multitipo. Le opzioni disponibili dipendono dall'hardware. Le modalità via cavo e terrestre non possono essere attive contemporaneamente. Se si desidera utilizzarlo come cavo+satellite oppure terrestre+satellite, configurarlo prima per il cavo/terrestre e quindi salvare. Quindi rientrare dentro le sue impostazioni e configurarlo anche per il satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Questo è l'ordine secondo il quale i comandi DiSEqC vengono inviati nell'impianto. L'ordine deve corrispondere esattamente all'ordine in cui i dispositivi fisici sono installati lungo il cavo di segnale (a partire dal lato ricevitore)."
@@ -10711,9 +10751,6 @@ msgstr "Intrattenimento (6-14 anni)"
 msgid "epg cache backup"
 msgstr "Backup della cache EPG"
 
-msgid "equal to"
-msgstr "Uguale a"
-
 msgid "equestrian"
 msgstr "Ippica"
 
@@ -10931,9 +10968,6 @@ msgstr "Presente"
 
 msgid "long"
 msgstr "Lungo"
-
-msgid "loopthrough to"
-msgstr "In cascata a"
 
 msgid "magazines/reports/documentary"
 msgstr "Riviste/Report/Documentari"
@@ -11237,9 +11271,6 @@ msgstr "Stato della ricerca"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Fantascienza/Fantasy/Horror"
-
-msgid "second cable of motorized LNB"
-msgstr "Secondo cavo dell'LNB motorizzato"
 
 msgid "seconds"
 msgstr "secondi"
