--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2019-02-01 15:59+0100\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -2052,6 +2052,24 @@ msgstr "Oppsettstype: %s"
 #
 msgid "Configuration..."
 msgstr "Innstilling..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Installerer"
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Installerer"
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Installerer"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Still inn ytterligere forsinkelse for å forbedre ekstern undertekst synkronisering."
@@ -4476,6 +4494,16 @@ msgid "Hotkey zap"
 msgstr "Snarveistast zap"
 
 #
+#, fuzzy
+msgid "Hotswitchable"
+msgstr "lar seg ikke teste"
+
+#
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Valgbar tuner:"
+
+#
 msgid "How many minutes do you want add to the recording?"
 msgstr "Hvor mange minutter vil du legge til opptaket?"
 
@@ -4815,6 +4843,11 @@ msgstr "Ugyldig mappe er valgt:%s"
 
 #
 msgid "Invalid location"
+msgstr "Ugyldig mappe"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Ugyldig mappe"
 
 #
@@ -7745,6 +7778,18 @@ msgstr "Velg 'A' eller 'B' hvis antenne systemet krever dette, ellers, velger du
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Velg 'FBC SCR' hvis denne tuneren bruker en SCR (Unicable/JESS) enhet. Velg 'FBC automatisk' for alle andre oppsett."
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Velg 'band' hvis du bruker en universal LNB, ellers les din LNB bruksanvisning."
 
@@ -9274,7 +9319,8 @@ msgid "Switch to radio mode"
 msgstr "Gå til radiomodus"
 
 #
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Valgbar tuner:"
 
 msgid "Switzerland"
@@ -9607,8 +9653,8 @@ msgstr ""
 "For en vanlig bruker er den uvesentlig.\n"
 "Vær vennlig ikke få panikk hvis det vises informasjon som ser mistenkelig ut!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Dette er en multitype tuner. Tilgjengelige alternativer avhenger av maskinvaren. Kabel og bakkenett kan ikke konfigureres på samme tid. Hvis du vil bruke som kabel + satellitt eller bakkenett + satellitt, konfigurer kabel/bakkenett først og deretter lagre. Åpne på nytt og konfigurer som satellitt."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Dette er rekkefølgen som DiSEqC kommandoene sendes til antenne systemet. Rekkefølgen må tilsvare nøyaktig rekkefølgen de fysiske enhetene er ordnet langs signalkabelen (starter fra mottaker og utover)."
@@ -11807,10 +11853,6 @@ msgstr "underholdning (6-14 år)"
 msgid "epg cache backup"
 msgstr "sikkerhetskopi av EPG-hurtigbuffer"
 
-#
-msgid "equal to"
-msgstr "lik"
-
 msgid "equestrian"
 msgstr "hestesport"
 
@@ -12054,9 +12096,6 @@ msgstr "låst"
 #
 msgid "long"
 msgstr "lang"
-
-msgid "loopthrough to"
-msgstr "gjennomgang til"
 
 msgid "magazines/reports/documentary"
 msgstr "magasiner/rapporter/dokumentarer"
@@ -12401,10 +12440,6 @@ msgstr "søkestatus"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction/fantasi/skrekk"
-
-#
-msgid "second cable of motorized LNB"
-msgstr "sekundær kabel for motorisert LNB"
 
 #
 msgid "seconds"
