--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -1861,6 +1861,21 @@ msgstr "Configuratiemodus: %s"
 
 msgid "Configuration..."
 msgstr "Configuratie..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Configureren"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Configureren"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Configureren"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr ""
@@ -4231,6 +4246,14 @@ msgstr "Instellen Hotkey plugin"
 msgid "Hotkey zap"
 msgstr "Hotkey zappen"
 
+#, fuzzy
+msgid "Hotswitchable"
+msgstr "niet te testen"
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Schakelbare tunertypes:"
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "Hoeveel minuten wilt u aan de opname toevoegen?"
 
@@ -4539,6 +4562,10 @@ msgid "Invalid directory selected: %s"
 msgstr "Ongeldige map geselecteerd: %s"
 
 msgid "Invalid location"
+msgstr "Ongeldige locatie"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Ongeldige locatie"
 
 msgid "Invalid transponder data"
@@ -7139,6 +7166,18 @@ msgstr "Kies voor 'A' of 'B' indien uw antenne dit vereist, of anders kies je vo
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Kies voor 'Unicable' als de tuner gebruikt maakt van een SRC (Unicable / Jess) apparaat. In elk ander geval kies voor 'FBC automatisch'."
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Kies 'band' indien u een 'universele' LNB gebruikt, of raadpleeg anders de specificaties van uw LNB. "
 
@@ -8517,7 +8556,8 @@ msgstr "Ga naar het vorige subkanaal"
 msgid "Switch to radio mode"
 msgstr "Schakel naar de radio modus"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Schakelbare tunertypes:"
 
 msgid "Switzerland"
@@ -8830,8 +8870,8 @@ msgstr ""
 "\n"
 "De hier weergegeven informatie is enkel van belang voor ontwikkelaars. Voor de gewone eindgebruiker is deze informatie niet van belang."
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
-msgstr "Dit is een multifunctionele tuner. Beschikbare opties zijn afhankelijk van de hardware. Kabel en Terrestrial kunnen niet gelijktijdig ingesteld worden. Als u het wilt gebruiken als cable + satellite or terrestrial + satellite, configureer dan eerst kabel/terrestrial en sla dit op. Open de opties opnieuw en configureer als satelliet."
+msgid "This is a multitype tuner. Available options depend on the hardware."
+msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Dit is hoe de diseqc commando's naar het ontvangstsysteem verstuurd worden. Dit moet exact overeenkomen met de volgorde zoals de fysieke apparaten op de coax aangesloten zijn, te beginnen bij de ontvanger."
@@ -10883,9 +10923,6 @@ msgstr "Amusement (6-14 jaar)"
 msgid "epg cache backup"
 msgstr "EPG cache backup"
 
-msgid "equal to"
-msgstr "gelijk aan"
-
 msgid "equestrian"
 msgstr "Ruitersport"
 
@@ -11098,9 +11135,6 @@ msgstr "locked"
 
 msgid "long"
 msgstr "lang"
-
-msgid "loopthrough to"
-msgstr "Doorverbonden naar"
 
 msgid "magazines/reports/documentary"
 msgstr "Magazines/Verslagen/Documentaires"
@@ -11404,9 +11438,6 @@ msgstr "zoekstatus"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Science Fiction/Fantasie/Horror"
-
-msgid "second cable of motorized LNB"
-msgstr "2e kabel van gemotoriseerde LNB"
 
 msgid "seconds"
 msgstr "seconden"
