--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -2142,6 +2142,24 @@ msgstr "Nastavitveni način:  %s"
 #
 msgid "Configuration..."
 msgstr "Dodatne nastavitve"
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Nastavljam..."
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Nastavljam..."
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Nastavljam..."
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Določitev dodatnega zamika za izboljšanje sinhronizacije zunanjih podnapisov."
@@ -4652,6 +4670,14 @@ msgstr ""
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Preklopljive vrste kanalnikov:"
+
 #
 #, fuzzy
 msgid "How many minutes do you want add to the recording?"
@@ -5006,6 +5032,11 @@ msgstr "Izbrana neveljavna mapa: %s"
 
 #
 msgid "Invalid location"
+msgstr "Neveljavna lokacija"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Neveljavna lokacija"
 
 #
@@ -8078,6 +8109,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -9703,7 +9746,8 @@ msgid "Switch to radio mode"
 msgstr "Preklop v način radio"
 
 #
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Preklopljive vrste kanalnikov:"
 
 msgid "Switzerland"
@@ -10026,7 +10070,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -12290,10 +12334,6 @@ msgstr ""
 msgid "epg cache backup"
 msgstr "varnostno kopiranje epg podatkov"
 
-#
-msgid "equal to"
-msgstr "enako kot"
-
 msgid "equestrian"
 msgstr ""
 
@@ -12543,10 +12583,6 @@ msgstr "zaklenjen"
 
 msgid "long"
 msgstr ""
-
-#
-msgid "loopthrough to"
-msgstr "preskoči na"
 
 msgid "magazines/reports/documentary"
 msgstr ""
@@ -12906,10 +12942,6 @@ msgstr "stanje iskanja"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-#
-msgid "second cable of motorized LNB"
-msgstr "drugi kabel motoriziranega LNB-a"
 
 msgid "seconds"
 msgstr "sekund"
