--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -2137,6 +2137,24 @@ msgstr "Mod konfiguracije"
 #, fuzzy
 msgid "Configuration..."
 msgstr "Mrežna konfiguracija..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Konfigurišem"
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Konfigurišem"
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Konfigurišem"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr ""
@@ -4668,6 +4686,14 @@ msgstr ""
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Zamenljivi tipovi tjunera:"
+
 #
 #, fuzzy
 msgid "How many minutes do you want add to the recording?"
@@ -5026,6 +5052,11 @@ msgstr "Izabran je nevažeči direktorijum: %s"
 #
 #, fuzzy
 msgid "Invalid location"
+msgstr "Nevažeća lokacija"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Nevažeća lokacija"
 
 msgid "Invalid transponder data"
@@ -8145,6 +8176,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -9790,7 +9833,8 @@ msgid "Switch to radio mode"
 msgstr ""
 
 #
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Zamenljivi tipovi tjunera:"
 
 msgid "Switzerland"
@@ -10121,7 +10165,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -12378,10 +12422,6 @@ msgstr ""
 msgid "epg cache backup"
 msgstr ""
 
-#
-msgid "equal to"
-msgstr "jednako"
-
 msgid "equestrian"
 msgstr ""
 
@@ -12634,10 +12674,6 @@ msgstr "zaključan"
 
 msgid "long"
 msgstr ""
-
-#
-msgid "loopthrough to"
-msgstr "Prolaz do"
 
 msgid "magazines/reports/documentary"
 msgstr ""
@@ -12992,10 +13028,6 @@ msgstr "status skeniranja"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-#
-msgid "second cable of motorized LNB"
-msgstr "drugi kabal od motorizovanog LNB-a"
 
 #
 msgid "seconds"
