--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -2090,6 +2090,24 @@ msgstr "Konfigurationsläge : %s"
 #
 msgid "Configuration..."
 msgstr "Konfiguration..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Konfigurering"
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Konfigurering"
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Konfigurering"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Konfigurera ytterligare en fördröjning för att förbättra extern undertextsynkronisering."
@@ -4556,6 +4574,15 @@ msgid "Hotkey zap"
 msgstr "Hotkey zapp"
 
 #, fuzzy
+msgid "Hotswitchable"
+msgstr "omöjlig att testa"
+
+#
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Växlingbara tunertyper :"
+
+#, fuzzy
 msgid "How many minutes do you want add to the recording?"
 msgstr "Hur många minuter vill du lägga till inspelning?"
 
@@ -4900,6 +4927,11 @@ msgstr "Ogiltigt bibliotek valt : %s"
 
 #
 msgid "Invalid location"
+msgstr "Ogiltig sökväg"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Ogiltig sökväg"
 
 msgid "Invalid transponder data"
@@ -7916,6 +7948,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -9478,7 +9522,8 @@ msgid "Switch to radio mode"
 msgstr "Växla till radioläge"
 
 #
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Växlingbara tunertyper :"
 
 msgid "Switzerland"
@@ -9822,7 +9867,7 @@ msgstr ""
 "För en normal användare är detta inte intressant.\n"
 "Få inte panik om ni ser värden som ni tycker ser misstänkta ut!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -12104,10 +12149,6 @@ msgstr "underhållning (6-14 år)"
 msgid "epg cache backup"
 msgstr "EPG cache kopia"
 
-#
-msgid "equal to"
-msgstr "lika med"
-
 msgid "equestrian"
 msgstr "hästsport"
 
@@ -12356,10 +12397,6 @@ msgstr "låst"
 
 msgid "long"
 msgstr "lång"
-
-#
-msgid "loopthrough to"
-msgstr "loopthrough till"
 
 msgid "magazines/reports/documentary"
 msgstr "tidningar / rapporter / dokumentär"
@@ -12714,10 +12751,6 @@ msgstr "sökningsstatus"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction / fantasi / skräck"
-
-#
-msgid "second cable of motorized LNB"
-msgstr "andra kabeln från motorstyrt LNB"
 
 #
 msgid "seconds"
