--- a/po/th.po
+++ b/po/th.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1-En-Th\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2010-04-08 18:13+0700\n"
 "Last-Translator: Tony - Thaidreambox\n"
 "Language-Team: Tony @ Thai Dreambox <tonyboyth@gmail.com>\n"
@@ -1888,6 +1888,21 @@ msgstr "โหมดการตั้งค่า"
 #, fuzzy
 msgid "Configuration..."
 msgstr "ตั้งค่าเครือข่าย..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "กำลังตั้งค่า"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "กำลังตั้งค่า"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "กำลังตั้งค่า"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr ""
@@ -4159,6 +4174,12 @@ msgstr ""
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+msgid "Hotswitchable tuner"
+msgstr ""
+
 #, fuzzy
 msgid "How many minutes do you want add to the recording?"
 msgstr "บันทึกรายต่อไปอีกกี่นาที?"
@@ -4477,6 +4498,10 @@ msgstr "โฟล์เดอร์นี้: %s ไม่ถูกต้อง"
 
 #, fuzzy
 msgid "Invalid location"
+msgstr "ปลายทางไม่ถูกต้อง"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "ปลายทางไม่ถูกต้อง"
 
 msgid "Invalid transponder data"
@@ -7189,6 +7214,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -8649,7 +8686,7 @@ msgstr "ไปบริการย่อยก่อนหน้า"
 msgid "Switch to radio mode"
 msgstr ""
 
-msgid "Switchable tuner types:"
+msgid "Switchable tuner types"
 msgstr ""
 
 msgid "Switzerland"
@@ -8937,7 +8974,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -10949,9 +10986,6 @@ msgstr ""
 msgid "epg cache backup"
 msgstr ""
 
-msgid "equal to"
-msgstr "เท่ากับ"
-
 msgid "equestrian"
 msgstr ""
 
@@ -11171,9 +11205,6 @@ msgstr "ล๊อคแล้ว"
 
 msgid "long"
 msgstr ""
-
-msgid "loopthrough to"
-msgstr "ปล่อยผ่านไปที่"
 
 msgid "magazines/reports/documentary"
 msgstr ""
@@ -11478,9 +11509,6 @@ msgstr "สถานะการค้นหา"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-msgid "second cable of motorized LNB"
-msgstr "เลือกสายบังคับ LNB"
 
 msgid "seconds"
 msgstr "วินาที"
