--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -1866,6 +1866,21 @@ msgstr "Yapılandırma modu: %s"
 
 msgid "Configuration..."
 msgstr "Yapılandırma..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Ayarlanıyor"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Ayarlanıyor"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Ayarlanıyor"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Altyazı senkronizasyonu için gecikme yapılandırması."
@@ -4097,6 +4112,13 @@ msgstr "Kurulum Tuşu"
 msgid "Hotkey zap"
 msgstr "ZAP Tuşu"
 
+msgid "Hotswitchable"
+msgstr ""
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Seçilebilir tuner tipleri:"
+
 #, fuzzy
 msgid "How many minutes do you want add to the recording?"
 msgstr "Kaç dakika kayıt eklemek istiyorsunuz?"
@@ -4405,6 +4427,10 @@ msgid "Invalid directory selected: %s"
 msgstr "Seçilen klasör geçersiz: %s"
 
 msgid "Invalid location"
+msgstr "Geçersiz konum"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Geçersiz konum"
 
 msgid "Invalid transponder data"
@@ -7039,6 +7065,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -8436,7 +8474,8 @@ msgstr "Önceki alt servise geç"
 msgid "Switch to radio mode"
 msgstr "Radyo modu"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Seçilebilir tuner tipleri:"
 
 msgid "Switzerland"
@@ -8736,7 +8775,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -10759,9 +10798,6 @@ msgstr "Eğlence (6-14 yaş)"
 msgid "epg cache backup"
 msgstr "epg önbelleğini yedekle"
 
-msgid "equal to"
-msgstr "Eşit"
-
 msgid "equestrian"
 msgstr "Binicilik"
 
@@ -10979,9 +11015,6 @@ msgstr "Kilitli"
 
 msgid "long"
 msgstr "Uzun"
-
-msgid "loopthrough to"
-msgstr "Üzerinden bağla"
 
 msgid "magazines/reports/documentary"
 msgstr "Magazin/Belgesel"
@@ -11287,9 +11320,6 @@ msgstr "Kanal arama durumu"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Bilim Kurgu/Fantastik/Korku"
-
-msgid "second cable of motorized LNB"
-msgstr "Motorlu LNB'nin ikinci kablosu"
 
 msgid "seconds"
 msgstr "Saniye"
