--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 王彪 <satfan@163.com>\n"
 "Language-Team: 中國\n"
@@ -1837,6 +1837,21 @@ msgstr ""
 
 msgid "Configuration..."
 msgstr ""
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "配置"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "配置"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "配置"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr ""
@@ -4041,6 +4056,12 @@ msgstr ""
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+msgid "Hotswitchable tuner"
+msgstr ""
+
 #, fuzzy
 msgid "How many minutes do you want add to the recording?"
 msgstr "您想錄製多少分鐘?"
@@ -4342,6 +4363,9 @@ msgid "Invalid directory selected: %s"
 msgstr "選擇了無效目錄: %s"
 
 msgid "Invalid location"
+msgstr ""
+
+msgid "Invalid reason"
 msgstr ""
 
 msgid "Invalid transponder data"
@@ -6970,6 +6994,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -8365,7 +8401,7 @@ msgstr ""
 msgid "Switch to radio mode"
 msgstr ""
 
-msgid "Switchable tuner types:"
+msgid "Switchable tuner types"
 msgstr ""
 
 msgid "Switzerland"
@@ -8645,7 +8681,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -10593,9 +10629,6 @@ msgstr ""
 msgid "epg cache backup"
 msgstr ""
 
-msgid "equal to"
-msgstr "相同"
-
 msgid "equestrian"
 msgstr ""
 
@@ -10814,9 +10847,6 @@ msgstr "鎖定"
 
 msgid "long"
 msgstr ""
-
-msgid "loopthrough to"
-msgstr "聯繫"
 
 msgid "magazines/reports/documentary"
 msgstr ""
@@ -11123,9 +11153,6 @@ msgstr "掃描狀態"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-msgid "second cable of motorized LNB"
-msgstr "第二條線纜連接Rotor"
 
 msgid "seconds"
 msgstr "秒"
