--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2011-05-07 12:23+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -1997,6 +1997,21 @@ msgstr "Stillinga hamur"
 #, fuzzy
 msgid "Configuration..."
 msgstr "Stilling nettengingar..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Stilli"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Stilli"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Stilli"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr ""
@@ -4446,6 +4461,13 @@ msgstr ""
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Gerðir umskiptanlegra móttakara:"
+
 #
 #, fuzzy
 msgid "How many minutes do you want add to the recording?"
@@ -4795,6 +4817,11 @@ msgstr "Ógild mappa valin: %s"
 #
 #, fuzzy
 msgid "Invalid location"
+msgstr "Ógildur staður"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Ógildur staður"
 
 msgid "Invalid transponder data"
@@ -7866,6 +7893,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -9489,7 +9528,8 @@ msgstr "Skipta á fyrri undirrás"
 msgid "Switch to radio mode"
 msgstr ""
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Gerðir umskiptanlegra móttakara:"
 
 msgid "Switzerland"
@@ -9819,7 +9859,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -12041,10 +12081,6 @@ msgstr ""
 msgid "epg cache backup"
 msgstr ""
 
-#
-msgid "equal to"
-msgstr "jafnt og"
-
 msgid "equestrian"
 msgstr ""
 
@@ -12295,10 +12331,6 @@ msgstr "læst"
 
 msgid "long"
 msgstr ""
-
-#
-msgid "loopthrough to"
-msgstr "tengt saman við"
 
 msgid "magazines/reports/documentary"
 msgstr ""
@@ -12652,10 +12684,6 @@ msgstr "leitar staða"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-#
-msgid "second cable of motorized LNB"
-msgstr "annar kapall frá mótorstýrðu LNB"
 
 #
 msgid "seconds"
