--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -2118,6 +2118,24 @@ msgstr "Modo de configuração: %s"
 #, fuzzy
 msgid "Configuration..."
 msgstr "Configuração..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "A configurar"
+
+#
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "A configurar"
+
+#
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "A configurar"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Configurar um atraso adicional para melhorar a sincronização das legendas externas."
@@ -4629,6 +4647,14 @@ msgstr ""
 msgid "Hotkey zap"
 msgstr ""
 
+msgid "Hotswitchable"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Tipos de sintonizador:"
+
 #
 #, fuzzy
 msgid "How many minutes do you want add to the recording?"
@@ -4985,6 +5011,11 @@ msgstr "Directório seleccionado inválido: %s"
 #
 #, fuzzy
 msgid "Invalid location"
+msgstr "Localização inválida"
+
+#
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Localização inválida"
 
 msgid "Invalid transponder data"
@@ -8108,6 +8139,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -9747,7 +9790,8 @@ msgid "Switch to radio mode"
 msgstr ""
 
 #
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Tipos de sintonizador:"
 
 msgid "Switzerland"
@@ -10081,7 +10125,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr ""
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -12373,10 +12417,6 @@ msgstr "entretenimento (6-14 anos)"
 msgid "epg cache backup"
 msgstr ""
 
-#
-msgid "equal to"
-msgstr "igual a"
-
 msgid "equestrian"
 msgstr "equestre"
 
@@ -12627,10 +12667,6 @@ msgstr "sintonizado"
 
 msgid "long"
 msgstr ""
-
-#
-msgid "loopthrough to"
-msgstr "loopthrough para"
 
 msgid "magazines/reports/documentary"
 msgstr "revistas/documentários"
@@ -12986,10 +13022,6 @@ msgstr "estado da pesquisa"
 
 msgid "science fiction/fantasy/horror"
 msgstr "ciência ficção/fantasia/terror"
-
-#
-msgid "second cable of motorized LNB"
-msgstr "segundo cabo do LNB motorizado"
 
 #
 msgid "seconds"
