--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 19:45+0100\n"
+"POT-Creation-Date: 2019-02-22 14:27+0330\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -1890,6 +1890,21 @@ msgstr "Режим конфігурації: %s"
 
 msgid "Configuration..."
 msgstr "Конфігурація..."
+
+msgid "Configure DVB-ATSC"
+msgstr ""
+
+#, fuzzy
+msgid "Configure DVB-C"
+msgstr "Налаштування"
+
+#, fuzzy
+msgid "Configure DVB-S"
+msgstr "Налаштування"
+
+#, fuzzy
+msgid "Configure DVB-T"
+msgstr "Налаштування"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Налаштування додаткової затримки для поліпшення синхронізації зовнішніх субтитрів."
@@ -4130,6 +4145,14 @@ msgid "Hotkey zap"
 msgstr "Перемикання кольорових кнопок"
 
 #, fuzzy
+msgid "Hotswitchable"
+msgstr "неперевірено"
+
+#, fuzzy
+msgid "Hotswitchable tuner"
+msgstr "Перемикані типи тюнерів:"
+
+#, fuzzy
 msgid "How many minutes do you want add to the recording?"
 msgstr "Скільки хвилин ви хочете додати до запису?"
 
@@ -4439,6 +4462,10 @@ msgid "Invalid directory selected: %s"
 msgstr "Вибрано неправильний каталог: %s"
 
 msgid "Invalid location"
+msgstr "Неправильне розташування"
+
+#, fuzzy
+msgid "Invalid reason"
 msgstr "Неправильне розташування"
 
 msgid "Invalid transponder data"
@@ -7094,6 +7121,18 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
+msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
+msgstr ""
+
+msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
+msgstr ""
+
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr ""
 
@@ -8495,7 +8534,8 @@ msgstr "Перейти на попередній підсервіс"
 msgid "Switch to radio mode"
 msgstr "Перемикання в режим радіо"
 
-msgid "Switchable tuner types:"
+#, fuzzy
+msgid "Switchable tuner types"
 msgstr "Перемикані типи тюнерів:"
 
 msgid "Switzerland"
@@ -8807,7 +8847,7 @@ msgid ""
 "Don't panic please when you see values being displayed that you think look suspicious!"
 msgstr "Ця інфо тільки для розробників! Для звичайних користувачів це не важливо. Не панікуйте, якщо тут з'явиться незрозуміла інформація!"
 
-msgid "This is a multitype tuner. Available options depend on the hardware. Cable and terrestrial cannot be configured at the same time. If you want to use as cable + satellite or terrestrial + satellite, configure cable/terrestrial first and then save. Re-open and configure again as satellite."
+msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
@@ -10875,9 +10915,6 @@ msgstr "розваги (6-14 років)"
 msgid "epg cache backup"
 msgstr "резервне копіювання кеш epg"
 
-msgid "equal to"
-msgstr "також як"
-
 msgid "equestrian"
 msgstr "кінний спорт"
 
@@ -11095,9 +11132,6 @@ msgstr "захоплено"
 
 msgid "long"
 msgstr "довго"
-
-msgid "loopthrough to"
-msgstr "петля до"
 
 msgid "magazines/reports/documentary"
 msgstr "журнали/репортажі/документальний"
@@ -11403,9 +11437,6 @@ msgstr "стан пошуку"
 
 msgid "science fiction/fantasy/horror"
 msgstr "наукова фантастика/фентезі/жахи"
-
-msgid "second cable of motorized LNB"
-msgstr "другий кабель від LNB на моторі"
 
 msgid "seconds"
 msgstr "секунди"
